--- a/static/styles/fontello/demo.html
+++ b/static/styles/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?45128306');
-      src: url('./font/fontello.eot?45128306#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?45128306') format('woff'),
-           url('./font/fontello.ttf?45128306') format('truetype'),
-           url('./font/fontello.svg?45128306#fontello') format('svg');
+      src: url('./font/fontello.eot?40344908');
+      src: url('./font/fontello.eot?40344908#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?40344908') format('woff'),
+           url('./font/fontello.ttf?40344908') format('truetype'),
+           url('./font/fontello.svg?40344908#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -304,9 +304,14 @@ body {
         <div class="the-icons span3" title="Code: 0xe803"><i class="demo-icon icon-up-open">&#xe803;</i> <span class="i-name">icon-up-open</span><span class="i-code">0xe803</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe804"><i class="demo-icon icon-cancel">&#xe804;</i> <span class="i-name">icon-cancel</span><span class="i-code">0xe804</span></div>
+        <div class="the-icons span3" title="Code: 0xe805"><i class="demo-icon icon-cancel-1">&#xe805;</i> <span class="i-name">icon-cancel-1</span><span class="i-code">0xe805</span></div>
         <div class="the-icons span3" title="Code: 0xf07b"><i class="demo-icon icon-link-1">&#xf07b;</i> <span class="i-name">icon-link-1</span><span class="i-code">0xf07b</span></div>
         <div class="the-icons span3" title="Code: 0xf099"><i class="demo-icon icon-twitter">&#xf099;</i> <span class="i-name">icon-twitter</span><span class="i-code">0xf099</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0xf09a"><i class="demo-icon icon-facebook">&#xf09a;</i> <span class="i-name">icon-facebook</span><span class="i-code">0xf09a</span></div>
+        <div class="the-icons span3" title="Code: 0xf0c9"><i class="demo-icon icon-menu">&#xf0c9;</i> <span class="i-name">icon-menu</span><span class="i-code">0xf0c9</span></div>
         <div class="the-icons span3" title="Code: 0xf281"><i class="demo-icon icon-reddit-alien">&#xf281;</i> <span class="i-name">icon-reddit-alien</span><span class="i-code">0xf281</span></div>
       </div>
     </div>
