--- a/static/styles/fontello/demo.html
+++ b/static/styles/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?40344908');
-      src: url('./font/fontello.eot?40344908#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?40344908') format('woff'),
-           url('./font/fontello.ttf?40344908') format('truetype'),
-           url('./font/fontello.svg?40344908#fontello') format('svg');
+      src: url('./font/fontello.eot?49922568');
+      src: url('./font/fontello.eot?49922568#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?49922568') format('woff'),
+           url('./font/fontello.ttf?49922568') format('truetype'),
+           url('./font/fontello.svg?49922568#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -312,6 +312,7 @@ body {
       <div class="row">
         <div class="the-icons span3" title="Code: 0xf09a"><i class="demo-icon icon-facebook">&#xf09a;</i> <span class="i-name">icon-facebook</span><span class="i-code">0xf09a</span></div>
         <div class="the-icons span3" title="Code: 0xf0c9"><i class="demo-icon icon-menu">&#xf0c9;</i> <span class="i-name">icon-menu</span><span class="i-code">0xf0c9</span></div>
+        <div class="the-icons span3" title="Code: 0xf0e0"><i class="demo-icon icon-mail-alt">&#xf0e0;</i> <span class="i-name">icon-mail-alt</span><span class="i-code">0xf0e0</span></div>
         <div class="the-icons span3" title="Code: 0xf281"><i class="demo-icon icon-reddit-alien">&#xf281;</i> <span class="i-name">icon-reddit-alien</span><span class="i-code">0xf281</span></div>
       </div>
     </div>
